<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?attr/selectableItemBackground"
        android:textColor="?attr/colorPrimary"
        android:textSize="36sp"
        android:layout_marginBottom="36dp"
        android:text="@string/goals"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?attr/selectableItemBackground"
        android:textColor="?attr/colorPrimary"
        android:textSize="36sp"
        android:layout_marginBottom="36dp"
        android:text="@string/needs"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?attr/selectableItemBackground"
        android:textColor="?attr/colorPrimary"
        android:textSize="36sp"
        android:layout_marginBottom="36dp"
        android:text="@string/information"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?attr/selectableItemBackground"
        android:textColor="?attr/colorPrimary"
        android:textSize="36sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="36dp"
        android:onClick="spinner"
        android:text="@string/spinner"/>

</LinearLayout>