<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:src="@drawable/ic_info"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="36dp"
        android:text="@string/personal_info"
        android:gravity="center"
        android:textSize="36sp"/>

    <EditText
        android:id="@+id/primaryInput"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/secondaryInput"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />
</LinearLayout>