<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandingActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/fhouse"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:src="@drawable/fhouse_blur"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_home"
                android:layout_marginBottom="12dp"
                android:textColor="@color/white"
                android:textSize="36sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/blurb"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

        <View android:layout_width="match_parent"
              android:layout_height="5dp"
              android:background="?attr/colorPrimary"
              android:layout_gravity="bottom"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackground"
                android:textColor="?attr/colorPrimary"
                android:textSize="36sp"
                android:layout_marginBottom="36dp"
                android:onClick="newUserClicked"
                android:text="@string/new_user"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?attr/selectableItemBackground"
            android:textColor="?attr/colorPrimary"
            android:textSize="36sp"
            android:onClick="existingUserClicked"
            android:text="@string/existing_user"/>
    </LinearLayout>
</LinearLayout>
